<resources>
    <string name="app_name">CronometroCorreto</string>
    <string name="start_button">start</string>
    <string name="pause_button">pause</string>
    <string name="reset_button">reset</string>
    <string name="working">working</string>
    <string name="stopped">stopped</string>
    <string name="reset">reset</string>
    <string name="note_button">lap</string>
    <string name="time_log">time log</string>
    <string name="lap_count">lap added</string>
    <string name="button_chronometer">chronometer</string>
    <string name="button_timer">timer</string>
    <string name="return_button">return</string>
    <string name="returning">returning</string>
    <string name="name_field">name</string>
    <string name="timer_input">type a number (in seconds) to countdown</string>
    <string name="timer_warn">already running</string>
    <string name="finished">timer finished</string>
    <string name="failed_upload">upload failed</string>
    <string name="succeded_upload">upload succeded</string>
    <string name="succeded_download">download succeded</string>
    <string name="failed_download">download failed</string>
    <string name="failed_erase">erase failed</string>
    <string name="succeded_erase">erase worked</string>
    <string name="times_button">see times</string>
    <string name="erase_button">erase everything</string>
    <string name="nothing_found">nothing found</string>
</resources>