<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="277dp"
        android:gravity="center"
        android:text="00:00:000"
        android:textColor="#E3DDDD"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/resetButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="131dp"
        android:layout_height="79dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="29dp"
        android:background="#C95F82C6"
        android:shadowRadius="5"
        android:text="@string/reset_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <Button
        android:id="@+id/noteButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="137dp"
        android:layout_height="72dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="16dp"
        android:text="@string/note_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetButton" />

    <Button
        android:id="@+id/startButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="139dp"
        android:layout_height="81dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="28dp"
        android:text="@string/start_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <TextView
        android:id="@+id/timeLog"
        android:layout_width="313dp"
        android:layout_height="112dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="132dp"
        android:text="@string/time_log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetButton" />

    <Button
        android:id="@+id/return_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/times_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="129dp"
        android:layout_height="72dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="464dp"
        android:text="@string/times_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="64dp"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/return_button" />

</androidx.constraintlayout.widget.ConstraintLayout>